# arcui-mcp-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_bridge.py  test_carryover.py  test_idempotency.py
examples/: __init__.py  first_experiment.ipynb
examples/custom_tools/: __init__.py  drift_detector.py
src/arcui_mcp/: __init__.py  analyze.py  bridge.py  knowledge.py  knowledge_server.py  server.py
