[project]
name = "arcui-mcp-python"
version = "0.1.0"
description = "ArcUI Spatial Digital Twin Engine - MCP Server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Marlon Romero Castro" },
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
# Install with: uv sync --extra science
# Brings the scientific Python stack used by the example notebook and the
# arcui_mcp.analyze module (bundle loading, run comparison, plotting).
# Kept optional so the bare MCP server stays small for Claude Desktop installs
# that never touch analysis code.
science = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

# Install with: uv sync --extra knowledge
# Brings the Local RAG / Knowledge Pack backend (ChromaDB vector store +
# Ollama embeddings / generation). Off by default — set
# ARCUI_ENABLE_KNOWLEDGE_TOOLS=true after install to expose the indexing
# and grounded-generation tools to MCP clients. Local-first: documents
# never leave the host and no external API keys are required.
knowledge = [
    "chromadb>=0.5",
    "ollama>=0.4",
    "pypdf>=4.0",
]

# Install with: uv sync --extra dev
# Tooling for contributors — pre-commit hooks that strip notebook outputs
# and enforce basic hygiene before any commit reaches the repository.
dev = [
    "pre-commit>=4.0",
    "nbstripout>=0.7",
]

[project.scripts]
arcui-mcp-server = "arcui_mcp.server:mcp.run"
# Local-first HTTP retrieval endpoint for device-side clients (off unless
# ARCUI_ENABLE_KNOWLEDGE_TOOLS=true). See arcui_mcp.knowledge_server.
arcui-knowledge-server = "arcui_mcp.knowledge_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcui_mcp"]
